
[TestXmlProcessor - 1]
<?xml version="1.0"?>
<customers>
   <customer id="55000">
      <name>Charter Group</name>
      <address>
         <street>100 Main</street>
         <city>Framingham</city>
         <state>MA</state>
         <zip>01701</zip>
      </address>
      <address>
         <street>720 Prospect</street>
         <city>Framingham</city>
         <state>MA</state>
         <zip>01701</zip>
      </address>
      <address>
         <street>120 Ridge</street>
         <state>MA</state>
         <zip>01760</zip>
      </address>
   </customer>
</customers>
---

[TestXmlProcessorEdit - 1]
<?xml version="1.0"?>
<customers>
   <customer id="123">
      <name>John &amp; Doe</name>
      <address>
         <street>100 Main</street>
         <city>Framingham</city>
         <state>MA</state>
         <zip>01701</zip>
      </address>
      <address>
         <street>720 Prospect</street>
         <city>Framingham</city>
         <state>MA</state>
         <zip>01701</zip>
      </address>
      <address>
         <street>120 Ridge</street>
         <state>MA</state>
         <zip>01760</zip>
      </address>
   </customer>
</customers>
---

[TestXmlCDataWithJsonNotParsed - 1]
<?xml version="1.0" encoding="UTF-8"?>
<configuration>
    <appender name="STDOUTJSON" class="ch.qos.logback.core.ConsoleAppender">
        <encoder class="net.logstash.logback.encoder.LoggingEventCompositeJsonEncoder">
            <providers>
                <pattern>
                    <omitEmptyFields>true</omitEmptyFields>
                    <pattern><![CDATA[
                        {
                          "timestamp": "%date{ISO8601}",
                          "logger": "%logger{0}",
                          "service_name": "Service",
                          "component": "Component",
                          "level": "%level",
                          "thread": "%thread",
                          "ndc": "%X{NDC}",
                          "message": "%message",
                          "traceId": "%mdc{traceId}"
                        }
                        ]]></pattern>
                </pattern>
            </providers>
        </encoder>
    </appender>
</configuration>
---
